--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <title>Responsive Web Page</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header>
+    <h1>Welcome to My Responsive Page</h1>
+  </header>
   <section class="about">
-    <img src="kluh.png">
+    <img src="klu.png" class="image">
     <p>This page includes a responsive image and adjusts layout using CSS media queries.</p>
+    <h1>This is responsive web page</h1>
   </section>
-
-  <div class="container">
-    <div class="box1">BOX 1</div>
-    <div class="box2">BOX 2</div>
-    <div class="box3">BOX 3</div>
-  </div>
 </body>
 </html>
