made a test update to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
   <section class="about">
     <img src="klu.png" class="image">
+    <h1>welcome to webpage:</h1>
     <p>This page includes a responsive image and adjusts layout using CSS media queries.</p>
   </section>
 
